tests: cleaning in test config files.
Cleaning duplicate blocks and deprecated parameters.

Change-Id: I4a8f3cdb947bf6c6d819b9a1297ea264afa6654c

--- a/tests/lustre_fs/cfg/OtherParameters_1.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_1.conf
@@ -8,7 +8,6 @@ EntryProcessor
 
 General
 {
-    lock_file = "/var/lock/rbh.lock";
 	fs_path = /mnt/lustre;
 	fs_type = lustre;
 }
@@ -77,14 +76,7 @@ FS_Scan
     Ignore { path == "/mnt/lustre/.lustre" }
 }
 
-
-
-
-
-
-
-
-
+%include "test_policies.inc"
 
 Filesets
 {
