--- a/tests/lustre_fs/cfg/OtherParameters_3.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_3.conf
@@ -16,7 +16,7 @@ hsm_remove_parameters
 {
     nb_threads = 2;
     queue_size = 6;
-    max_rm_count = 4;
+    max_action_count = 4;
 }
 
 migration_rules
