--- a/tests/lustre_fs/cfg/compress.conf
+++ b/tests/lustre_fs/cfg/compress.conf
@@ -75,11 +75,9 @@ FS_Scan
     Ignore { path == "/mnt/lustre/.lustre" }
 }
 
-FS_Scan {
-	ignore { type == directory and name == ".lustre" }
-}
+%include "test_policies.inc"
 
-Migration_rules
+migration_rules
 {
     policy default
     {
