--- a/tests/lustre_fs/cfg/test_maintenance.conf
+++ b/tests/lustre_fs/cfg/test_maintenance.conf
@@ -20,5 +20,5 @@ migration_rules
 migration_parameters
 {
     pre_maintenance_window = 30s;
-    maint_migr_delay_min = 5s;
+    maint_min_apply_delay = 5s;
 }
