--- a/tests/lustre_fs/cfg/test_mnt_point.conf
+++ b/tests/lustre_fs/cfg/test_mnt_point.conf
@@ -75,12 +75,7 @@ FS_Scan
     Ignore { path == "/mnt/lustre/.lustre" }
 }
 
-define_policy migration {
-    scope { type == file and (status == new or status == modified) }
-    status_manager = $STATUS_MGR;
-    default_action = $DEFAULT_ARCHIVE;
-    default_lru_sort_attr = last_mod;
-}
+%include "test_policies.inc"
 
 migration_rules
 {
