--- a/tests/lustre_fs/cfg/test_trig3.conf
+++ b/tests/lustre_fs/cfg/test_trig3.conf
@@ -40,7 +40,8 @@ purge_trigger
     high_threshold_cnt = 50;
     low_threshold_cnt  = 40;
     check_interval     = 5min ;
-    notify = TRUE;
+    alert_high = yes;
+    alert_low = yes;
     post_trigger_wait = 0;
 }
 
@@ -51,7 +52,8 @@ purge_trigger
     high_threshold_vol = 100MB;
     low_threshold_vol  = 80MB;
     check_interval     = 5min ;
-    notify = TRUE;
+    alert_high = yes;
+    alert_low = yes;
     post_trigger_wait = 0;
 }
 
@@ -62,7 +64,8 @@ purge_trigger
     high_threshold_vol = 10MB;
     low_threshold_vol  = 5MB;
     check_interval     = 5min ;
-    notify = TRUE;
+    alert_high = yes;
+    alert_low = yes;
 }
 
 purge_trigger
@@ -72,5 +75,6 @@ purge_trigger
     high_threshold_cnt = 50;
     low_threshold_cnt  = 40;
     check_interval     = 5min ;
-    notify = TRUE;
+    alert_high = yes;
+    alert_low = yes;
 }
