--- a/tests/lustre_fs/cfg/test_updt.conf
+++ b/tests/lustre_fs/cfg/test_updt.conf
@@ -87,6 +87,8 @@ db_update_params
     fileclass_update = periodic(10s);
 }
 
+%include "test_policies.inc"
+
 filesets
 {
     fileclass to_be_ignored
@@ -104,20 +106,6 @@ filesets
         definition { name == "purg*"}
     }
 
-}
-
-define_policy migration {
-    scope { type == file and (status == new or status == modified) }
-    status_manager = $STATUS_MGR;
-    default_action = $DEFAULT_ARCHIVE;
-    default_lru_sort_attr = last_mod;
-}
-
-define_policy purge {
-    scope { type == file and status == synchro }
-    status_manager = $STATUS_MGR;
-    default_action = $DEFAULT_PURGE;
-    default_lru_sort_attr = last_access;
 }
 
 migration_rules
