Added check-valgrind rule to do make check under valgrind
Use the ax_valgrind_check from the autoconf archive.

automake needs to support LOG_COMPILER. The version (1.11) in Centos 6
is too old and won't work.

To execute the tests under valgrind, run "make check-valgrind". If
valgrind isn't installed or was configured out, an error message will
be displayed.

Change-Id: I83c247ef18cf2cfc72553b8bbeb0f01d0a820071

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,8 @@
 ACLOCAL_AMFLAGS = -I autotools/m4
 
+check-valgrind:
+	make -C src/tests check-valgrind
+
 SUBDIRS=src scripts tests web_gui
 
 rpm_dir=`pwd`/rpms
