Fixed make tags and make dist
Remove non-existent files from Makefiles. Add man to the automake
subdirectories. Added missing headers to automake.

These errors prevented make tags and make dist to complete. The
distribution created by make dist can be compiled too.

Change-Id: I36935d607fa10a157678097d858ed85fb6d02961

--- a/Makefile.am
+++ b/Makefile.am
@@ -81,7 +81,7 @@ EXTRA_DIST= robinhood.spec robinhood.spec.in   		\
 	doc/admin_guides \
     doc/install_webgui.txt \
 	ChangeLog \
-    man/*.1
+    man/*.1 man\Makefile.am
 
 
 
