Allow specifying policy 'action' at multiple levels.
Policy 'action' can be defined:
- In policy definition, as 'define_policies::default_action'.
- In policy parameters, as '<policy>_parameters::action'.
- In policy rules, as 'rule::action'.

Policy 'action' overrides policy 'default_action'
and rule-level 'action' overrides policy 'action'.

Define a common function to parse 'action' in all these blocks.

Change-Id: Ia2a943d01f6383ed17d557a458f2f8a33b78afb3

--- a/doc/templates_v3/template.conf
+++ b/doc/templates_v3/template.conf
@@ -57,6 +57,9 @@ lhsm_archive_parameters {
     suspend_error_pct = 50%;
     suspend_error_min= 100;
 
+    # overrides policy default action
+    action = cmd("lfs hsm_archive /mnt/lustre/.lustre/fid/{fid}");
+
     # default action parameters
     action_params {
         archive_id = 1;
@@ -68,8 +71,11 @@ lhsm_archive_rules {
 
     rule archive_small {
         target_fileclass = small_files;
-        action_params { archive_id = 2; }
         condition { last_mod >= 30min }
+
+        # overrides policy action
+        action = cmd("lfs hsm_archive {fullpath}");
+        action_params { archive_id = 2; }
     }
 
     rule archive_std {
