--- a/src/tests/tst.data/ok.conf
+++ b/src/tests/tst.data/ok.conf
@@ -114,6 +114,8 @@ lhsm_archive_parameters
     nb_threads = 2;
     max_action_count = 100;
 
+    action = cmd("lfs hsm_archive {fullpath}");
+
     action_params {
         foo = bar;
         derive = "{foo}";
@@ -137,7 +139,7 @@ lhsm_archive_rules
     rule arch_dir3 {
         target_fileclass = dir3;
         condition { last_mod > 10 }
-        action = cmd(toto);
+        action = cmd("lfs hsm_archive /mnt/lustre/.lustre/fid/{fid}");
         action_params {
             cos = 42;
             xyz = "{fileclass} {rule}";
