--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,9 +1,5 @@
-dist_man_MANS=robinhood.1 rbh-report.1 rbh-find.1  rbh-du.1
+dist_man_MANS=robinhood.1 rbh-report.1 rbh-find.1 rbh-du.1
 
-robinhood.1: mans
-rbh-report.1: mans
-rbh-find.1: mans
-rbh-du.1: mans
-
-mans:
-	chmod +x ../scripts/make_mans.sh && ../scripts/make_mans.sh
+# Manually generate man pages from each executable --help
+manpages:
+	../scripts/make_mans.sh
