Added man page for rbh-diff
Harmonized rbh-diff output with the other commands.

Added a volume title "Robinhood <version>" to the man pages.

Change-Id: Ia347fe73c238c8d10ad0957678e00231d62446c3

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,5 +1,5 @@
-dist_man_MANS=robinhood.1 rbh-report.1 rbh-find.1 rbh-du.1
+dist_man_MANS=robinhood.1 rbh-report.1 rbh-find.1 rbh-du.1 rbh-diff.1
 
 # Manually generate man pages from each executable --help
 manpages:
-	../scripts/make_mans.sh
+	export VERSION=${VERSION}; ../scripts/make_mans.sh
