Use GNU basename only.
Ensure we use the GNU version of basename everywhere.
In particular, this version ensures its path argument is not modified.

Change-Id: Idbebeee06dbe311b24b4ed51b68f33d58e9530a4

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -14,7 +14,7 @@ endif
 
 libcommontools_la_SOURCES= RW_Lock.c uidgidcache.c rbh_misc.c rbh_params.c \
                            param_utils.c  global_config.c update_params.c \
-                           queue.c rbh_logs.c rbh_modules.c \
+                           queue.c rbh_logs.c rbh_modules.c basename.c \
                            $(FS_SRC) $(PURPOSE_SRC) $(COMPAT_SRC)
 
 indent:
