status manager: implement action callback.
When status managers support multiple type of actions
(e.g. archive, release...) the policy definition must indicate the action it
implements, so the status manager can determine the post-action status
depending on the undertaken action and its status.

Configuration example:
    define_policy lhsm_archive {
        status_manager = lhsm(archive);
    ...

This allows setting entries in a transient state (e.g. archiving)
when an action is asynchronous, and prevents from triggering duplicate
actions if there is a current asynchronous action on the entry.

Tests 201-204 now check transient entry status 'archiving' with lhsm.

Dropped lhsm status 'release_pending' as 'release' action is synchronous.

Change-Id: Iea7cb51e98d65414324c50e96d5051e51f3b6f4a

--- a/src/tests/tst.data/ok.conf
+++ b/src/tests/tst.data/ok.conf
@@ -99,7 +99,7 @@ Filesets {
 
 define_policy lhsm_archive
 {
-    status_manager = lhsm;
+    status_manager = lhsm(archive);
     scope { type == file and (status == new or status == modified) }
     default_action = lhsm.archive;
     default_lru_sort_attr = last_mod;
@@ -160,7 +160,7 @@ lhsm_archive_rules
 
 define_policy lhsm_release
 {
-    status_manager = lhsm;
+    status_manager = lhsm(release);
     scope { type == file and status == synchro }
     default_action = lhsm.release;
     default_lru_sort_attr = last_access;
@@ -259,7 +259,7 @@ cleanup_rules {
 }
 
 define_policy backup {
-    status_manager = backup;
+    status_manager = backup(archive);
     scope { type == file and (status == new or status == modified) }
     default_action = common.copy;
     default_lru_sort_attr = creation;
