listmgr: simplify accounting configuration.
Previously, there were 2 parameters to enable/disble accounting:
'user_acct' and 'group_acct'.
As most of the time (always?) they are enabled/disabled together,
we turn them to a single parameter 'accounting'.

Change-Id: I086632ecb1e6c1a08b487a5fbad161332e55b628

--- a/doc/templates/hsm_policy_detailed.conf
+++ b/doc/templates/hsm_policy_detailed.conf
@@ -397,8 +397,7 @@ ListManager
         #password_file = "/etc/robinhood.d/lhsm/.dbpassword" ;
         # engine = InnoDB;
 	}
-#       user_acct = FALSE;
-#       group_acct = FALSE;
+#       accounting = no;
 }
 
 db_update_policy
