--- a/doc/templates/hsmlite_detailed.conf
+++ b/doc/templates/hsmlite_detailed.conf
@@ -269,8 +269,7 @@ ListManager
 		#password_file = "/etc/robinhood.d/backup/.dbpassword";
         # engine = InnoDB;
 	}
-#       user_acct = FALSE;
-#       group_acct = FALSE;
+#       accounting = no;
 }
 
 db_update_policy
