--- a/doc/templates/tmp_fs_mgr_detailed.conf
+++ b/doc/templates/tmp_fs_mgr_detailed.conf
@@ -80,8 +80,7 @@ ListManager
         # engine = InnoDB;
     }
 
-#       user_acct = FALSE;
-#       group_acct = FALSE;
+#       accounting = no;
 }
 
 # Entry Processor configuration
