--- a/tests/huge_posix/cfg/common.conf
+++ b/tests/huge_posix/cfg/common.conf
@@ -44,8 +44,7 @@ ListManager
         	retry_delay_microsec = 1000 ;
 	}
 
-#	user_acct = FALSE;
-#	group_acct = FALSE;
+#	accounting = no;
 }
 
 # for tests with backup purpose
