--- a/tests/lustre_fs/cfg/acct.conf
+++ b/tests/lustre_fs/cfg/acct.conf
@@ -58,8 +58,7 @@ ListManager
 	        db_file = "/tmp/robinhood_sqlite_db" ;
         	retry_delay_microsec = 1000 ;
 	}
-    user_acct = "on";
-    group_acct = "on";
+    accounting = $ACCT_SWITCH;
 }
 
 # for tests with backup purpose
