--- a/tests/posix_fs/cfg/acct.conf
+++ b/tests/posix_fs/cfg/acct.conf
@@ -3,7 +3,7 @@
 
 General
 {
-    fs_path = "/tmp/mnt.rbh";
+	fs_path = "/tmp/mnt.rbh";
 	fs_type = ext3;
 }
 
@@ -41,9 +41,7 @@ ListManager
         	retry_delay_microsec = 1000 ;
 	}
 
-    user_acct = "off";
-    group_acct = "on";
-
+    accounting = $ACCT_SWITCH;
 }
 
 # for tests with backup purpose
