tests: converted v2.x parameter names to v3.
There was still some 'max_migration_count' and 'max_migration_volume'
parameters in test config files.
Replaced them by 'max_action_count' and 'max_action_volume'.

Also replaced 'check_copy_status_on_startup' and 'check_copy_status_delay'
by 'check_actions_on_startup', 'check_actions_interval'.

Change-Id: I0fbdd00052b3f05506f192e4704f961191627d2b

--- a/tests/lustre_fs/cfg/OtherParameters_4.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_4.conf
@@ -38,8 +38,8 @@ migration_rules
 
 migration_parameters
 {
-    max_migration_volume = 100MB;
-    check_copy_status_on_startup = TRUE;
-    check_copy_status_delay = 30sec;
+    max_action_volume = 100MB;
+    check_actions_on_startup = TRUE;
+    check_actions_interval = 30sec;
 }
 
