policies: set "recheck_ignored_classes = false" by default.
It is very expensive to recheck entries of ignored fileclasses
at each policy run.
Disable this feature by default (performance by default).
It must be enabled if the user explicitly wants to update
entries from ignored fileclasses.

Change-Id: I48f7d16e8be53768f2016a568501347e1a85d9e6

--- a/tests/posix_fs/cfg/test_updt.conf
+++ b/tests/posix_fs/cfg/test_updt.conf
@@ -32,6 +32,11 @@ filesets
 
 }
 
+migration_parameters
+{
+    recheck_ignored_classes = yes;
+}
+
 migration_policies
 {
    ignore { name == "whitelist*" }
@@ -47,6 +52,11 @@ migration_policies
    {
         condition { last_mod >= 0 }
    }
+}
+
+purge_parameters
+{
+    recheck_ignored_classes = yes;
 }
 
 purge_policies
