--- a/tests/lustre_fs/cfg/test_updt.conf
+++ b/tests/lustre_fs/cfg/test_updt.conf
@@ -106,6 +106,11 @@ filesets
 
 }
 
+migration_parameters
+{
+    recheck_ignored_classes = yes;
+}
+
 migration_policies
 {
    ignore { name == "whitelist*" }
@@ -121,6 +126,11 @@ migration_policies
    {
         condition { last_mod >= 0 }
    }
+}
+
+purge_parameters
+{
+    recheck_ignored_classes = yes;
 }
 
 purge_policies
