--- a/tests/posix_fs/cfg/test_updt.conf
+++ b/tests/posix_fs/cfg/test_updt.conf
@@ -32,6 +32,11 @@ filesets
 
 }
 
+migration_parameters
+{
+    recheck_ignored_classes = yes;
+}
+
 migration_rules
 {
    ignore { name == "whitelist*" }
@@ -47,6 +52,11 @@ migration_rules
    {
         condition { last_mod >= 0 }
    }
+}
+
+purge_parameters
+{
+    recheck_ignored_classes = yes;
 }
 
 purge_rules
