purge: change 'no_sort' parameter to 'sort'.
Change-Id: I1b23c1780882da0deb3d119d0933b856f8ef0727

--- a/tests/lustre_fs/cfg/lru_purge.conf
+++ b/tests/lustre_fs/cfg/lru_purge.conf
@@ -18,5 +18,5 @@ purge_parameters {
 	# set a small result size to check request continuation
 	db_result_size_max = 2;	
 
-	no_sort = $NO_SORT;
+	sort = $SORT_PARAM;
 }
