packaging: parallel RPM build (make -j 8).
Change-Id: Ie0820ddc35dbd3d9a445b8997c1d5e02e882524a

--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -220,7 +220,7 @@ Generated using options: @ac_configure_args@
 ./configure @ac_configure_args@ %{?configure_flags:configure_flags} \
         --mandir=%{_mandir} \
         --libdir=%{_libdir}
-make
+make -j 8 || make
 
 %install
 rm -rf $RPM_BUILD_ROOT
