Port the autoconf file and some C sources to use Lustre 2.7 (port from v3).
In Lustre 2.7, changelof_ext_rec is gone, and is replaced by the
flexible changelogs format. Define HAVE_FLEX_CL when that is
detected. Adapt the code accordingly.

Signed-off-by: frank zago -- Cray Inc <fzago@cray.com>
Signed-off-by: Thomas Leibovici <thomas.leibovici@cea.fr>

Change-Id: I940cb1c1aae72aef923fbc595aa29725d871cd93

--- a/configure.ac
+++ b/configure.ac
@@ -174,7 +174,7 @@ if test "x$support_lustre" = "xyes" ; then
     		# test changelog functions
 
 	    	AC_CHECK_LIB([lustreapi],[llapi_changelog_start],[have_llapi_changelog_start="yes"])
-		    if test "x$have_llapi_changelog_start" = "xyes"; then 
+		    if test "x$have_llapi_changelog_start" = "xyes"; then
 		        AC_DEFINE(HAVE_CHANGELOGS, 1, [Lustre changelogs records are structures])
                 AC_CHECK_DECL([CL_IOCTL],AC_DEFINE(_HAVE_CL_IOCTL,1,[CL_IOCTL is defined]),[],[
                     #define LPX64 "%#llx"
@@ -183,6 +183,16 @@ if test "x$support_lustre" = "xyes" ; then
                     #include <lustre/lustre_user.h>
                 ])
                 AC_CHECK_DECL([CL_LAYOUT],AC_DEFINE(HAVE_CL_LAYOUT,1,[Layout change emit changelog records]),[],[
+                    #define LPX64 "%#llx"
+                    #include <sys/types.h>
+                    #include <asm/types.h>
+                    #include <lustre/lustre_user.h>
+                ])
+
+                # changelog_ext_rec was removed by commit 0f22e4,
+                # which added the flexible changelog format. That
+                # commit added CLF_RENAME, so check for that symbol.
+                AC_CHECK_DECLS([CLF_RENAME],[],[],[
                     #define LPX64 "%#llx"
                     #include <sys/types.h>
                     #include <asm/types.h>
@@ -233,10 +243,9 @@ if test "x$support_lustre" = "xyes" ; then
     AM_CONDITIONAL(CHANGELOGS,  test  "x$have_llapi_changelog_start" = "xyes" )
     AM_CONDITIONAL(USER_LOVEA, [test  "x$have_new_lustre_header" != "xtrue" && test "x$have_llapi_changelog_start" = "xyes"])
 else
-    AM_CONDITIONAL(LUSTRE, test 0 = 1 )
-    AM_CONDITIONAL(CHANGELOGS, test 0 = 1 ) 
-    AM_CONDITIONAL( USER_LOVEA, test  0 = 1 )
-
+    AM_CONDITIONAL(LUSTRE,     test 0 = 1)
+    AM_CONDITIONAL(CHANGELOGS, test 0 = 1) 
+    AM_CONDITIONAL(USER_LOVEA, test  0 = 1)
 fi # end of Lustre support
 
 AC_CHECK_HEADERS([attr/xattr.h],[],[AC_MSG_ERROR([libattr-devel is not installed.])])
@@ -358,7 +367,7 @@ AM_CONDITIONAL(USE_SQLITE_DB,   test "$DB" = "SQLITE")
 
 # @TODO check database libraries and path
 
-# Db dependent checks and flags 
+# Db dependent checks and flags
 case $DB in
     MYSQL)
 
@@ -381,9 +390,9 @@ case $DB in
 
     SQLITE)
         # check lib and headers
-        AC_CHECK_HEADER([sqlite3.h], HAVE_SQLITE_HEADER="true", 
+        AC_CHECK_HEADER([sqlite3.h], HAVE_SQLITE_HEADER="true",
                     AC_MSG_ERROR([sqlite-devel not installed]))
-        AC_CHECK_LIB([sqlite3], [sqlite3_exec], HAVE_SQLITE_LIB="true", 
+        AC_CHECK_LIB([sqlite3], [sqlite3_exec], HAVE_SQLITE_LIB="true",
                     AC_MSG_ERROR([sqlite3 library not found]))
         DB_CFLAGS="-D_SQLITE"
         DB_LDFLAGS="-lsqlite3"
