--- a/scripts/sysconfig_robinhood.in
+++ b/scripts/sysconfig_robinhood.in
@@ -1,10 +1,10 @@
 
 # directory of configuration files for this service
-#RH_CONF_DIR=/etc/robinhood.d/@PURPOSE_EXT@
+#RH_CONF_DIR=/etc/robinhood.d/
 # current directory where the daemon is started
 #RH_RUN_DIR=/
 # path to robinhood command
-#DAEMON=/usr/sbin/@PURPOSE_BIN@
+#DAEMON=/usr/sbin/robinhood
 
 # options for starting the daemon
 # eg. --scan --purge (leave empty for default actions).
